IF (WIN32)
ELSE()
ADD_SUBDIRECTORY(term_network_pty)
ENDIF()

ADD_SUBDIRECTORY(term_data_handler)

IF (BUILD_WXWIDGETS_UI)
ADD_SUBDIRECTORY(term_ui)
ENDIF()

IF (BUILD_OPENGL_UI)
ADD_SUBDIRECTORY(term_gl_ui)
ENDIF()

ADD_SUBDIRECTORY(term_input_handler)
ADD_SUBDIRECTORY(term_buffer)

IF (BUILD_SCINTILLA_EDITOR)
ADD_SUBDIRECTORY(scintilla_editor)
ADD_SUBDIRECTORY(scintilla_editor_input_handler)
ENDIF()
